HTML layout for Homepage Done
Changed from About me Layout to Homepage layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel="stylesheet" href="css/index.css">
         <title></title>
     </head>
@@ -18,16 +19,69 @@
 
             </nav>
         </header>
-        <section class="heroImg">
+        <section class="hero">
             <div class="content">
-                <p> I graduated from Monash University at the end of 2022 achieving a Degree in Bachelor of Information Technology. When doing my bachelor’s I realised that I had more strength in creativity than programming, as I was able to produce better quality work within the IT Design. 
-                    This included Usability, Product Design & Web Design. I have also liked the Analytics part of IT which involves designing & building dashboards to showcase Data. 
-                    I wanted to further increase my knowledge in UI/UX so I decided to take part in a bootcamp which gave training in all aspects of UI/UX Design process, in both group and individual environments. 
-                    This includes the ability to empathise, define & solve problems, prototype & end-to-end testing. 
+                <h1>Hello!</h1>
+                <h2>I'm Swetha Gollapalli & <br> I am a Ul/UX designer!</h2>
+                <p> I’m an IT Graduate who is based in Melbourne with experience in UI/UX design & Advanced Analytics for retail. 
+                    I’m very detailed oriented & passionate about learning new skills & utilising them in producing good quality work to achieve a positive outcome.
                 </p>
-                
-                <img src="Images/IMG_2061 1.png">
+                <p>Scroll To See My Work!</p>
+                <!--Down arrow icon won't be implemented at the moment, researching for a library-->
+                <a> </a>
             </div>
+        </section class="casestudyone">
+        <div class= "content">
+            <h3>
+                Travel Go Mobile App (Mobile App Case Study)
+            </h3>
+            <div class= "backing-block">
+                <h2>Travel Go Mobile App</h2>
+                <p>Mobile App Case Study on Travel Attitudes & Habits of Users Post Pandemic</p>
+                <img src= "Images/Case Study image 1.png">
+            </div>
+        </div>
+        <section>
+
+        </section class="casestudytwo">
+        <div class= "content">
+            <h3>
+                Moodie Mobile App (Group Project)
+            </h3>
+            <div class= "backing-block">
+                <h2>Moodie Mobile App</h2>
+                <p>Designing of a Mood Tracking App, in a group, to help improve users’ mental health.</p>
+                <img src= "Images/Case Study image 2.png">
+            </div>
+        </div>
+        <section>
+
+        </section class="casestudythree">
+        <div class= "content">
+            <h3>
+                SisterWorks Desktop & Mobile Website Redesign (Group Project)
+            </h3>
+            <div class= "backing-block">
+                <h2>SisterWorks Website Redesign</h2>
+                <p>Redesigning the website of the non-profit organisation SisterWorks on both Desktop & Mobile, in a group.</p>
+                <img src= "Images/Case Study image 3.png">
+            </div>
+        </div>
+        <section>
+
+        </section class="casestudyfour">
+        <div class= "content">
+            <h3>
+                ATO Desktop & Mobile Website Redesign (Website Redesign Case Study)
+            </h3>
+            <div class= "backing-block">
+                <h2>ATO Website Redesign</h2>
+                <p>Redesigning the Government Agency website of ATO on both Desktop & Mobile.</p>
+                <img src= "Images/Case Study image 4.png">
+            </div>
+        </div>
+        <section>
+            
         </section>
         <footer>
             <h2>
@@ -36,6 +90,9 @@
             <p>
                  Feel free to get in touch with me! Happy to have a chat!<br>Email: swetha.gollapalli@yahoo.com
             </p>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-linkedin"></a>
 
             <caption> Copyright 2020 </caption>
 
