--- a/index.html
+++ b/index.html
@@ -2,34 +2,38 @@
     <head>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel="stylesheet" href="css/index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
         <title></title>
     </head>
     <body>
-        <header class= "Navigation">
+        <header class= "Navigation">    
             <div class= "inline-block-logo">
                 <img src="Images/Screen Shot 2023-04-27 at 6.40 1.png"> 
             </div>
-
             <nav class= "inline-block">
                 <ul>
-                    <li>Home</li>
+                    <li id= "Home">Home</li>
                     <li>Work</li>
                     <li>About</li>
                   </ul>
-
             </nav>
         </header>
         <section class="hero">
             <div class="content">
-                <h1>Hello!</h1>
-                <h2>I'm Swetha Gollapalli & <br> I am a Ul/UX designer!</h2>
-                <p> I’m an IT Graduate who is based in Melbourne with experience in UI/UX design & Advanced Analytics for retail. 
-                    I’m very detailed oriented & passionate about learning new skills & utilising them in producing good quality work to achieve a positive outcome.
+                <h1 id="uh1">Hello!</h1>
+                <h2 id="uh2">I'm Swetha Gollapalli & <br> I am a Ul/UX designer!</h2>
+                <p> I’m an IT Graduate who is based in Melbourne with experience in UI/UX design & <br> Advanced Analytics for retail. 
+                    I’m very detailed oriented & passionate about learning <br> new skills & utilising them in producing good quality work to achieve a positive <br> outcome.
                 </p>
-                <p>Scroll To See My Work!</p>
+                <p id= "Scroll">Scroll To See My Work!</p>
                 <!--Down arrow icon won't be implemented at the moment, researching for a library-->
-                <a> </a>
             </div>
+            </section>
+
+            <div class="line-1"></div>
+
         </section class="casestudyone">
         <div class= "content">
             <h3>
@@ -83,18 +87,21 @@
         <section>
             
         </section>
+
+        <div class="line-1"></div>
+
         <footer>
-            <h2>
+            <h1>
                 Connect with me!
-            </h2>
-            <p>
+            </h1>
+            <p id="intouch">
                  Feel free to get in touch with me! Happy to have a chat!<br>Email: swetha.gollapalli@yahoo.com
             </p>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-linkedin"></a>
 
-            <caption> Copyright 2020 </caption>
+            <p> Copyright 2020 </p>
 
 
         </footer>
