--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <a href="#" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-linkedin"></a>
 
-            <p> Copyright 2020 </p>
+            <p id= "copy"> Copyright 2020 </p>
 
 
         </footer>
