--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
         <title></title>
     </head>
     <body>
@@ -34,66 +34,62 @@
 
             <div class="line-1"></div>
 
-        </section class="casestudyone">
-        <div class= "content">
+        <section class="casestudyone">
+        <div class= "content1">
             <h3>
                 Travel Go Mobile App (Mobile App Case Study)
             </h3>
-            <div class= "backing-block">
-                <h2>Travel Go Mobile App</h2>
-                <p>Mobile App Case Study on Travel Attitudes & Habits of Users Post Pandemic</p>
+            <div class= "backing-block1">
                 <img src= "Images/Case Study image 1.png">
+                <h2>Travel Go Mobile App</h2>
+                <p>Mobile App Case Study on Travel Attitudes & <br> Habits of Users Post Pandemic</p>
+                
             </div>
         </div>
         <section>
 
-        </section class="casestudytwo">
-        <div class= "content">
+        <section class="casestudytwo">
+        <div class= "content2">
             <h3>
                 Moodie Mobile App (Group Project)
             </h3>
-            <div class= "backing-block">
-                <h2>Moodie Mobile App</h2>
-                <p>Designing of a Mood Tracking App, in a group, to help improve users’ mental health.</p>
+            <div class= "backing-block2">
                 <img src= "Images/Case Study image 2.png">
+                <h2>Moodie Mobile App</h2>
+                <p>Designing of a Mood Tracking App, in a <br> group, to help improve users’ mental health.</p>
             </div>
         </div>
         <section>
 
-        </section class="casestudythree">
-        <div class= "content">
+        <section class="casestudythree">
+        <div class= "content3">
             <h3>
                 SisterWorks Desktop & Mobile Website Redesign (Group Project)
             </h3>
-            <div class= "backing-block">
-                <h2>SisterWorks Website Redesign</h2>
-                <p>Redesigning the website of the non-profit organisation SisterWorks on both Desktop & Mobile, in a group.</p>
+            <div class= "backing-block3">
                 <img src= "Images/Case Study image 3.png">
+                <h2>SisterWorks Website Redesign</h2>
+                <p>Redesigning the website of the non-profit <br> organisation SisterWorks on both Desktop & Mobile, in a group.</p>
             </div>
         </div>
         <section>
 
-        </section class="casestudyfour">
-        <div class= "content">
+        <section class="casestudyfour">
+        <div class= "content4">
             <h3>
                 ATO Desktop & Mobile Website Redesign (Website Redesign Case Study)
             </h3>
-            <div class= "backing-block">
-                <h2>ATO Website Redesign</h2>
-                <p>Redesigning the Government Agency website of ATO on both Desktop & Mobile.</p>
+            <div class= "backing-block4">
                 <img src= "Images/Case Study image 4.png">
+                <h2>ATO Website Redesign</h2>
+                <p>Redesigning the Government <br> Agency website of ATO on both <br> Desktop & Mobile.</p>
             </div>
         </div>
         <section>
-            
-        </section>
 
-        <div class="line-1"></div>
 
-        <footer>
-            <h1>
-                Connect with me!
-            </h1>
+        <footer class= "Footer">
+            <h1>Connect with me!</h1>
             <p id="intouch">
                  Feel free to get in touch with me! Happy to have a chat!<br>Email: swetha.gollapalli@yahoo.com
             </p>
@@ -102,8 +98,6 @@
             <a href="#" class="fa fa-linkedin"></a>
 
             <p id= "copy"> Copyright 2020 </p>
-
-
         </footer>
     </body>
 </html>
